refactor for swagger
