# data/products.go
@@ -1,112 +1,127 @@
 package data
 
 import (
-	"encoding/json"
 	"fmt"
-	"io"
-	"regexp"
-	"time"
-
-	"github.com/go-playground/validator"
 )
 
+// ErrProductNotFound is an error raised when a product can not be found in the database
+var ErrProductNotFound = fmt.Errorf("Product not found")
+
+// Product defines the structure for an API product
+// swagger:model
 type Product struct {
-	ID          int     `json:"id"`
-	Name        string  `json:"name" validate:"required"`
-	Description string  `json:"description"`
-	Price       float32 `json:"price" validate:"gt=0"`
-	SKU         string  `json:"sku" validate:"required,sku"`
-	CreatedOn   string  `json:"-"`
-	UpdatedOn   string  `json:"-"`
-	DeletedOn   string  `json:"-"` // "-" to omit in serialization
+	// the id for the product
+	//
+	// required: false
+	// min: 1
+	ID int `json:"id"` // Unique identifier for the product
+
+	// the name for this poduct
+	//
+	// required: true
+	// max length: 255
+	Name string `json:"name" validate:"required"`
+
+	// the description for this poduct
+	//
+	// required: false
+	// max length: 10000
+	Description string `json:"description"`
+
+	// the price for the product
+	//
+	// required: true
+	// min: 0.01
+	Price float32 `json:"price" validate:"required,gt=0"`
+
+	// the SKU for the product
+	//
+	// required: true
+	// pattern: [a-z]+-[a-z]+-[a-z]+
+	SKU string `json:"sku" validate:"sku"`
 }
 
+// Products defines a slice of Product
 type Products []*Product
 
-func (p *Product) Validate() error {
-	validate := validator.New()
-	validate.RegisterValidation("sku", func(fl validator.FieldLevel) bool {
-		re := regexp.MustCompile(`[a-z]+-[a-z]+-[a-z]+`)
-		matches := re.FindAllString(fl.Field().String(), -1)
-		return len(matches) == 1
-	})
-	return validate.Struct(p)
-}
-
-func (ps *Products) ToJSON(w io.Writer) error {
-	e := json.NewEncoder(w)
-	return e.Encode(ps)
-}
-
-func (p *Product) FromJSON(r io.Reader) error {
-	d := json.NewDecoder(r)
-	return d.Decode(p)
-}
-
+// GetProducts returns all products from the database
 func GetProducts() Products {
 	return productList
 }
 
-func AddProduct(p *Product) {
-	p.ID = getNextID()
-	productList = append(productList, p)
-}
-
-func UpdateProduct(id int, p *Product) error {
-	pos, err := findProduct(id)
-	if err != nil {
-		return err
+// GetProductByID returns a single product which matches the id from the
+// database.
+// If a product is not found this function returns a ProductNotFound error
+func GetProductByID(id int) (*Product, error) {
+	i := findIndexByProductID(id)
+	if id == -1 {
+		return nil, ErrProductNotFound
 	}
 
-	p.ID = id
-	productList[pos] = p
+	return productList[i], nil
+}
+
+// UpdateProduct replaces a product in the database with the given
+// item.
+// If a product with the given id does not exist in the database
+// this function returns a ProductNotFound error
+func UpdateProduct(p Product) error {
+	i := findIndexByProductID(p.ID)
+	if i == -1 {
+		return ErrProductNotFound
+	}
+
+	// update the product in the DB
+	productList[i] = &p
+
 	return nil
 }
 
+// AddProduct adds a new product to the database
+func AddProduct(p Product) {
+	// get the next id in sequence
+	maxID := productList[len(productList)-1].ID
+	p.ID = maxID + 1
+	productList = append(productList, &p)
+}
+
+// DeleteProduct deletes a product from the database
 func DeleteProduct(id int) error {
-	pos, err := findProduct(id)
-	if err != nil {
-		return err
+	i := findIndexByProductID(id)
+	if i == -1 {
+		return ErrProductNotFound
 	}
 
-	productList[pos] = productList[len(productList)-1]
-	productList = productList[:len(productList)-1]
+	productList = append(productList[:i], productList[i+1:]...)
+
 	return nil
 }
 
-var ErrProductNotFound = fmt.Errorf("Product not found")
-
-func findProduct(id int) (int, error) {
+// findIndex finds the index of a product in the database
+// returns -1 when no product can be found
+func findIndexByProductID(id int) int {
 	for i, p := range productList {
 		if p.ID == id {
-			return i, nil
+			return i
 		}
 	}
-	return -1, ErrProductNotFound
+
+	return -1
 }
 
-func getNextID() int {
-	last := productList[len(productList)-1]
-	return last.ID + 1
-}
-
-var productList = Products{
+var productList = []*Product{
 	{
 		ID:          1,
 		Name:        "Latte",
-		Description: "Forthy milky cofee",
+		Description: "Frothy milky coffee",
 		Price:       2.45,
-		SKU:         "abcd323",
-		CreatedOn:   time.Now().UTC().String(),
-		UpdatedOn:   time.Now().UTC().String(),
+		SKU:         "abc323",
 	},
 	{
 		ID:          2,
-		Name:        "Espresso",
+		Name:        "Esspresso",
 		Description: "Short and strong coffee without milk",
 		Price:       1.99,
 		SKU:         "fjd34",
-		CreatedOn:   time.Now().UTC().String(),
-		UpdatedOn:   time.Now().UTC().String(),
 	},
 }
