# handlers/products.go
@@ -1,60 +1,56 @@
-// Package classification of Product API
-//
-// Documentation for Product API
-//
-//  Schemes: http
-//  BasePath: /
-//  Version: 1.0.0
-//
-//  Consumes:
-//  - application/json
-//
-//  Produces:
-//  - application/json
-//  swagger:meta
 package handlers
 
 import (
-	"context"
 	"fmt"
 	"log"
 	"net/http"
+	"strconv"
 
 	"github.com/denis-zakharov/gowebdev/data"
+	"github.com/gorilla/mux"
 )
 
-type Products struct {
-	l *log.Logger
-}
-
-func NewProducts(l *log.Logger) *Products {
-	return &Products{l}
-}
-
+// KeyProduct is a key used for the Product object in the context
 type KeyProduct struct{}
 
-func (psh *Products) MiddlewareProductValidation(next http.Handler) http.Handler {
-	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
-		p := &data.Product{}
-		err := p.FromJSON(r.Body)
-		if err != nil {
-			psh.l.Println("[ERROR] desirializing product", err)
-			http.Error(w, "Error reading product", http.StatusBadRequest)
-			return
-		}
+// Products handler for getting and updating products
+type Products struct {
+	l *log.Logger
+	v *data.Validation
+}
 
-		// validate the product
-		err = p.Validate()
-		if err != nil {
-			psh.l.Println("[ERROR] validating product", err)
-			http.Error(w, fmt.Sprintf("Error validating product: %s", err), http.StatusBadRequest)
-			return
-		}
+// NewProducts returns a new products handler with the given logger
+func NewProducts(l *log.Logger, v *data.Validation) *Products {
+	return &Products{l, v}
+}
 
-		// add the product to the context
-		ctx := context.WithValue(r.Context(), KeyProduct{}, p)
-		req := r.WithContext(ctx)
+// ErrInvalidProductPath is an error message when the product path is not valid
+var ErrInvalidProductPath = fmt.Errorf("invalid path, it should be /products/[id]")
 
-		next.ServeHTTP(w, req)
-	})
+// GenericError is a generic error message returned by a server
+type GenericError struct {
+	Message string `json:"message"`
+}
+
+// ValidationError is a collection of validation error messages
+type ValidationError struct {
+	Messages []string `json:"messages"`
+}
+
+// getProductID returns the product ID from the URL
+// Panics if cannot convert the id into an integer
+// this should never happen as the router ensures that
+// this is a valid number
+func getProductID(r *http.Request) int {
+	// parse the product id from the url
+	vars := mux.Vars(r)
+
+	// convert the id into an integer and return
+	id, err := strconv.Atoi(vars["id"])
+	if err != nil {
+		// should never happen
+		panic(err)
+	}
+
+	return id
 }
